src/popup/popup.css
header{
  display: flex;
  align-items: center;
  gap: var(--padding-sm);
  padding-bottom: var(--padding-sm);
  border-bottom: var(--border-1px);
}

header > img{
  height: 42px;
}

nav{
  position: relative;
  display: flex;
  gap: 0 var(--padding-md);
  flex-wrap: wrap;
  justify-content: center;
}

nav::before{
  content: '';
  position: absolute;
  width: 100vw;
  height: 100%;
  left: calc((100% - 100vw)/2);
  top: 0;
  box-shadow: 0 0 0 2px light-dark(var(--light-gray), var(--dark-gray));
  background-color: light-dark(white, var(--black));
  z-index: -1;
}

nav button:not(.primary, .secondary){
  font-weight: 700;
  padding: var(--padding-sm) 0;
  border: none;
  color: light-dark(var(--dark-gray), white);
  background-color: transparent;
  cursor: pointer;
  transition: color .2s ease-out;
}

nav button:disabled {
  color: light-dark(var(--light-gray), var(--medium-gray));
  cursor: default;
}

nav button:not(.primary, .secondary, :disabled):hover{
  color: var(--medium-blue);
}

main{
  display: flex;
  flex-flow: column wrap;
  gap: var(--padding-md);
  margin-top: var(--padding-lg);
  width: 100%;
}

body{
  width: 720px;
}

/*** TIMELINE STYLES ***/
fedifox-timeline ol{
  display: flex;
  flex-direction: column;
  gap: var(--padding-md);
  list-style: none;
}

status-card{
  display: block;
  width: 100%;
  padding: var(--padding-md);
  border: var(--border-2px);
  border-radius: var(--border-radius);
  background-color: light-dark(white, var(--black));
}

status-card header img{
  height: 30px;
}

status-card article{
  display: flex;
  flex-direction: column;
  gap: var(--padding-md);
}

status-card header a{
  display: contents;
  color: inherit;
}

status-card header address{
  font-weight: bold;
  font-style: normal;
  color: light-dark(var(--dark-gray), var(--light-gray));
}

status-card header time{
  color: var(--medium-gray);
}

status-content{
  position: relative;
  display: flex;
  flex-direction: column;
  gap: var(--padding-sm);
}

status-content.sensitive{
  min-height: 150px;
}

status-content .media{
  display: flex;
  flex-wrap: wrap;
  justify-content: flex-start;
  align-items: flex-start;
  gap: var(--padding-sm);
}

status-content .media figure{
  max-width: 320px;
  max-height: 320px;
  border: var(--border-1px);
  border-radius: var(--border-radius);
  overflow: hidden;
}

status-content .media figure > *{
  display: block;
  max-width: 100%;
  max-height: 100%;
}

sensitive-toggle dialog[open]{
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: var(--padding-sm);
  background: light-dark(hsl(0 0 95% / .5), hsl(0 0 20% / .5));
  border: var(--border-1px);
  border-radius: var(--border-radius);
  -webkit-backdrop-filter: blur(24px);
  backdrop-filter: blur(24px);
  z-index: 1;
}

sensitive-toggle dialog[open] + .sensitive-hide-btn{
  display: none;
}

sensitive-toggle .sensitive-hide-btn{
  position: absolute;
  top: -6px;
  right: 0;
  background: none;
  border: none;
  cursor: pointer;
}

status-actions{
  display: flex;
  align-items: center;
  gap: var(--padding-lg);
  padding-top: var(--padding-md);
  border-top: var(--border-1px);
}

.status-action {
  display: block;
  width: 18px;
  height: 18px;
  border: none;
  background-color: var(--medium-gray);
  -webkit-mask: var(--icon-url) no-repeat;
  mask: var(--icon-url) no-repeat;
  cursor: pointer;
}

.status-action.on, .status-action:active {
  background-color: var(--medium-green);
}

.status-replies{
  display: flex;
  gap: var(--padding-xs);
  align-items: center;
  color: var(--medium-gray);
  cursor: default;
}

article.boosted{
  border-left: var(--padding-sm) solid var(--light-gray);
  padding-left: var(--padding-sm);
}

.boost-credit{
  display: flex;
  height: 16px;
  gap: var(--padding-xs);
  margin-bottom: var(--padding-md);
  color: var(--medium-gray);
  font-style: italic;
}

.boost-credit::before{
  content: url(../commons/images/boost.svg);
  display: inline-block;
  width: 16px;
  opacity: .5;
}

.boost-credit a{
  display: contents;
  color: inherit;
  text-decoration: none;
  font-weight: bold;
}

preview-card{
  border: var(--border-1px);
  border-radius: var(--border-radius);
  background-image: var(--subtle-gradient);
}

preview-card figcaption{
  display: flex;
  flex-direction: column;
  gap: var(--padding-sm);
  padding: var(--padding-sm);
}

preview-card iframe{
  width: 100%;
  height: 100%;
  display: block;
  aspect-ratio: 16/9;
}

preview-card figure.default-img{
  display: flex;
}

preview-card figure.default-img img{
  height: 48px;
  margin: var(--padding-sm) 0 0 var(--padding-sm);
  opacity: .5;
}

preview-card p:empty{
  display: none;
}

/*** SHARE STYLES ***/
fedifox-share fieldset{
  display: flex;
  flex-direction: column;
  gap: var(--padding-sm);
  align-items: end;
}

/*** DETECTED ACTORS STYLES ***/
fedifox-detectedactors ul{
  display: flex;
  flex-direction: column;
  gap: var(--padding-md);
  margin-top: var(--padding-md);
  list-style: none;
}

actor-card{
  display: block;
  padding: var(--padding-md);
  border: var(--border-2px);
  border-radius: var(--border-radius);
  background-color: light-dark(white, black);
}

actor-card article{
  display: flex;
  flex-direction: column;
  gap: var(--padding-md);
}

actor-card header img{
  height: 30px;
}

actor-card address{
  font-style: normal;
}

actor-card footer{
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding-top: var(--padding-md);
  border-top: var(--border-1px);
  color: var(--medium-gray);
}

/*** LOADING STYLES ***/
.loading{
  position: relative;
  min-height: 100px;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 1;
}

.loading::after {
  content: url(../commons/images/loading.svg);
  width: 48px;
  height: 48px;
}

